--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -31,7 +31,7 @@
 
 .infoCardHeadline {
     color: black;
-    font-weight: bold;
+    font-weight: bold
 }
 
 .infoCardCallActionContainer :global(.vtex-button):hover  {
